v1.0.0: Java 11, Spring Boot 2.4.x